...
    tools:context=".LoginActivity">




    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:ems="10"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="Login"
        android:drawableBottom="@drawable/lock"/>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
...
