...
        android:textSize="18sp" android:text="_____________________________________________" android:layout_marginEnd="7dp"
        android:layout_marginTop="8dp" android:id="@+id/textView3"/>



-<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" android:orientation="horizontal" android:layout_marginBottom="8dp" android:id="@+id/b1container">

    <Button
        android:id="@+id/btn_courselist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="courselist"
        android:text="Course List"
        android:drawableBottom="@drawable/clipboard"/>



</LinearLayout>

    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/b1container" android:orientation="horizontal" android:layout_marginBottom="8dp" android:id="@+id/b3container">

 <Button
        android:id="@+id/btn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="schedule"
        android:text="Schedule"
        android:drawableBottom="@drawable/calendar"/>
...
    <Button
        android:id="@+id/btn_password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="password_reset"
        android:text="Password Reset" />

</LinearLayout>



</android.support.constraint.ConstraintLayout>
